修改编码为UTF-8

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Mon Mar 15 11:48:07 GMT 2010
+#Sat May 04 18:32:36 CST 2013
 eclipse.preferences.version=1
 encoding//src/config/db.properties=UTF-8
 encoding//src/config/db.properties_backup=UTF-8
